--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -736,6 +736,162 @@ a {
   font-size: 2rem;
   width: 1.6rem;
 }
+.cid-u1IkVi2BS4 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-u1IkVi2BS4 img,
+.cid-u1IkVi2BS4 .item-img {
+  width: 100%;
+}
+.cid-u1IkVi2BS4 .item:focus,
+.cid-u1IkVi2BS4 span:focus {
+  outline: none;
+}
+.cid-u1IkVi2BS4 .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-u1IkVi2BS4 .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-u1IkVi2BS4 .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-u1IkVi2BS4 .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-u1IkVi2BS4 .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-u1IkVi2BS4 .mbr-section-title {
+  color: #232323;
+}
+.cid-u1IkVi2BS4 .mbr-text,
+.cid-u1IkVi2BS4 .mbr-section-btn {
+  text-align: center;
+}
+.cid-u1IkVi2BS4 .item-title {
+  text-align: center;
+}
+.cid-u1IkVi2BS4 .item-subtitle {
+  text-align: center;
+}
+.cid-u1Ia9BhDGw {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-u1Ia9BhDGw img,
+.cid-u1Ia9BhDGw .item-img {
+  width: 100%;
+}
+.cid-u1Ia9BhDGw .item:focus,
+.cid-u1Ia9BhDGw span:focus {
+  outline: none;
+}
+.cid-u1Ia9BhDGw .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-u1Ia9BhDGw .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-u1Ia9BhDGw .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-u1Ia9BhDGw .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-u1Ia9BhDGw .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-u1Ia9BhDGw .mbr-section-title {
+  color: #232323;
+}
+.cid-u1Ia9BhDGw .mbr-text,
+.cid-u1Ia9BhDGw .mbr-section-btn {
+  text-align: center;
+}
+.cid-u1Ia9BhDGw .item-title {
+  text-align: center;
+}
+.cid-u1Ia9BhDGw .item-subtitle {
+  text-align: center;
+}
+.cid-u1IaMtTKZ0 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-u1IaMtTKZ0 img,
+.cid-u1IaMtTKZ0 .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-u1IaMtTKZ0 .item:focus,
+.cid-u1IaMtTKZ0 span:focus {
+  outline: none;
+}
+.cid-u1IaMtTKZ0 .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-u1IaMtTKZ0 .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-u1IaMtTKZ0 .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-u1IaMtTKZ0 .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-u1IaMtTKZ0 .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-u1IaMtTKZ0 .mbr-section-title {
+  color: #232323;
+}
+.cid-u1IaMtTKZ0 .mbr-text,
+.cid-u1IaMtTKZ0 .mbr-section-btn {
+  text-align: center;
+}
+.cid-u1IaMtTKZ0 .item-title {
+  text-align: center;
+}
+.cid-u1IaMtTKZ0 .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
 .cid-tDEDkX1V8Q {
   padding-top: 0rem;
   padding-bottom: 0rem;
